<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Wallpaper-->
        <ImageView
            android:scaleType="centerCrop"
            android:src="@drawable/bg1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#82ffffff"
        android:orientation="vertical"
        android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <!--Green Layout-->
        <RelativeLayout
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/admin"
            android:layout_margin="@dimen/margin">

            <!--Station1-->
            <ImageView
                android:id="@+id/imageViewCropTypr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_add" />

            <!--Title-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#82000000"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/croptype"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/admin"
            android:layout_margin="@dimen/margin">

            <!--Station1-->
            <ImageView
                android:id="@+id/imageViewCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_add" />

            <!--Title-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#82000000"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/crop"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <!--Green Layout-->
            <RelativeLayout
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/admin"
                android:layout_margin="@dimen/margin">

                <!--Station1-->
                <ImageView
                    android:id="@+id/imageViewSite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_action_add" />

                <!--Title-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#82000000"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/site"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>