<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:gravity="center"
            android:padding="2dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:id="@+id/textGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/style5"
                android:gravity="center"
                android:padding="20dp"
                android:text="สามชิก"
                android:textColor="@android:color/white"
                android:textSize="34sp" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="#82ffffff"
                android:orientation="vertical"
                android:padding="5dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <android.support.v7.widget.CardView
                        android:id="@+id/CardViewRegister"
                        android:layout_width="135dp"
                        android:layout_height="140dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/iconregister"
                                android:padding="10dp" />


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/lightgray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="สมาชิก"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/CardViewPlant"
                        android:layout_width="135dp"
                        android:layout_height="140dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/shovel"
                                android:padding="10dp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/lightgray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textSize="24dp"
                                android:fontFamily="@font/fonts1"
                                android:text="@string/station1"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/CardViewProduct"
                        android:layout_width="135dp"
                        android:layout_height="140dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/ic_harvest"
                                android:padding="10dp" />


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/lightgray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textSize="24dp"
                                android:padding="5dp"
                                android:fontFamily="@font/fonts1"
                                android:text="@string/station2"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/CardViewAddOrder"
                        android:layout_width="135dp"
                        android:layout_height="140dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/notepad"
                                android:padding="10dp" />


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/lightgray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textSize="24dp"
                                android:fontFamily="@font/fonts1"
                                android:text="@string/station3"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/CardViewSelectOrder"
                        android:layout_width="135dp"
                        android:layout_height="140dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/notepad"
                                android:padding="10dp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/lightgray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textSize="22dp"
                                android:fontFamily="@font/fonts1"
                                android:text="รายงานความต้องการ"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>




</RelativeLayout>